content: checkpoint, not ready for wider distribution yet though.

--- a/site/src/203/week/4.md
+++ b/site/src/203/week/4.md
@@ -1,4 +1,82 @@
 ---
-title: "Week 4"
+title: "Week 4: Circular Motion"
 ---
 
+
+## [1] Relevant Equations/Concepts
+
+
+??? note "Tip: Memorizing Formulae"
+
+    The equation sheet they give you has ~50-100 formulae...? In reality, you only need to memorize 1-5 formulae per unit, tops.
+
+    I'll write necessary equations/concepts in each of these weekly posts.
+
+TODO: Differentiate btwn $\Sigma \vec{F} = m \cdot \vec{a}_{\rm{net}}$
+
+<!-- If an object is moving with speed $v$ and wants to turn along a circle of radius $r$, it must have a *net* acceleration of $\frac{v^2}{r}$ towards the center of the circle. -->
+
+
+If you *observe* an object moving along a circular path of radius $r$, and it has a constant speed $v$ — then you *know* that the **net** acceleration (the result of one or more physical forces) is $\vec{a}_{\rm{net}}=\frac{v^2}{r}$, pointed towards the center of the circle.
+
+Note: this is an *inference from observation*.
+
+
+<!-- These two statements are logically/physically equivalent:
+
+- you *observe* an object moving along a circular path of radius $r$, and it has a constant speed $v$
+- the **net** acceleration is $\vec{a}_{\rm{net}}=\frac{v^2}{r}$, pointed towards the center of the circle. -->
+
+
+
+
+<!-- Note: this applies even if the object isn't traveling in a complete circle.  -->
+
+Note: this applies whether the object is travelling in a full circle, or just a small arc of a circle. All that matters is that for a "snapshot"/moment-in-time, the object is trying to turn.
+    - i.e. if I'm driving in a straight line, turn my steering wheel 10 degrees right for half a second, then return to driving straight, I have done "circular motion" / "centripetal acceleration" for however long my wheel was turned.
+
+
+
+
+
+Note: centripetal force isn't a physical force (T, mg, f, N), it's a label we apply to whatever force(s) are making the object go in a circle.
+
+
+v=2piR/T
+
+
+
+
+
+
+
+&nbsp;
+
+---
+
+## [2] Helpful Videos
+
+
+### Yau Jong Twu
+
+|                                                                   Link                                                                   |         Description/Preview          |
+| :--------------------------------------------------------------------------------------------------------------------------------------: | :----------------------------------: |
+|     [Overview of Centripetal Acceleration](https://www.youtube.com/watch?v=kjsxkbO4W_4){ target="_blank" rel="noopener noreferrer" }     |          Basic definitions           |
+|        [Car Making Turn on Level Road](https://www.youtube.com/watch?v=wdmOm-0dFMA){ target="_blank" rel="noopener noreferrer" }         | ![](https://i.imgur.com/2FUjLhe.png) |
+| [Mass kept in Horizontal Circle by Other Mass](https://www.youtube.com/watch?v=ligGOVJCQ3M){ target="_blank" rel="noopener noreferrer" } | ![](https://i.imgur.com/OyMPwnX.png) |
+|           [Tarzan Swinging on Vine](https://www.youtube.com/watch?v=qwjF1FYJ_vQ){ target="_blank" rel="noopener noreferrer" }            | ![](https://i.imgur.com/YIY99Bd.png) |
+|     [Whirling Water Cup & Roller Coaster](https://www.youtube.com/watch?v=cNlV9Q41ZBQ){ target="_blank" rel="noopener noreferrer" }      | ![](https://i.imgur.com/MHT0hHS.png) |
+|                 [Ferris Wheel](https://www.youtube.com/watch?v=h5X6V1CTr4k){ target="_blank" rel="noopener noreferrer" }                 | ![](https://i.imgur.com/BX2jHm0.png) |
+|              [Car on Hilly Road](https://www.youtube.com/watch?v=hfn-NmY-Ll0){ target="_blank" rel="noopener noreferrer" }               | ![](https://i.imgur.com/CfdFkB3.png) |
+|        [Rotor Ride (sticking to wall)](https://www.youtube.com/watch?v=RyUfzbLtxNg){ target="_blank" rel="noopener noreferrer" }         | ![](https://i.imgur.com/fnC0meI.png) |
+
+
+
+
+
+<!-- &nbsp;
+
+---
+
+## Recitation Prep
+ -->
