content: checkpoint, for anish to post.

--- a/site/src/203/week/5.md
+++ b/site/src/203/week/5.md
@@ -120,7 +120,7 @@ I like the analogy of "pouring liquid" between two "cups" of kinetic and potenti
 
 ---
 
-## [2] Helpful Videos
+## [2] Helpful Resources
 
 
 - [Yau-Jong Twu] Work and Energy...
