--- a/site/src/205/lab/2.md
+++ b/site/src/205/lab/2.md
@@ -1,5 +1,7 @@
 ---
 title: "Lab 2: Kinematics"
+hide:
+  - toc
 ---
 
 [Rewrite](https://docs.google.com/document/d/1KHM-U0MCXm5neFJG3it8NCrpzxY3Nj4TKj3Nv0SHdT4/edit?usp=drive_link)
