--- a/site/src/205/lab/4.md
+++ b/site/src/205/lab/4.md
@@ -1,5 +1,7 @@
 ---
 title: "Lab 4: Newton's Laws II"
+hide:
+  - toc
 ---
 
 [Rewrite](https://docs.google.com/document/d/1aMa1AgnhKl7BY4kaznRrE9Esb7sYbVQFh1FIa2yxgXM/edit?usp=drive_link)
