--- a/site/src/205/lab/3.md
+++ b/site/src/205/lab/3.md
@@ -1,5 +1,7 @@
 ---
 title: "Lab 3: Newton's Laws I"
+hide:
+  - toc
 ---
 
 [Rewrite](https://docs.google.com/document/d/1mPEY9lGVSscaKSP9IBO_z4MmWDfJxn3gxL49aIE99Fs/edit?usp=drive_link)
