content: just post announcement 1 already.

--- a/site/src/206/announcements/1.md
+++ b/site/src/206/announcements/1.md
@@ -16,11 +16,9 @@ You will never have to login/submit anything here, it's just a more easy/organiz
 
 ## [1] Recitations / Labs
 
-There are NO labs this week!
+There are NO labs this week! However, there *will* be recitations as usual.
 
-For recitation, I highly suggest looking over this page to prepare: [Week 5: Energy](../week/5.md){ target="_blank" rel="noopener noreferrer" }.
-
-Additionally, I posted some [resources you might find helpful](../meta/resources.md){ target="_blank" rel="noopener noreferrer" }.
+I posted some [resources you might find helpful](../meta/resources.md){ target="_blank" rel="noopener noreferrer" }.
 
 
 &nbsp;
