--- a/site/src/205/announcements/1.md
+++ b/site/src/205/announcements/1.md
@@ -36,6 +36,8 @@ I'll have study sessions on these dates:
 | Wednesday | 04:00 PM - 07:00 PM | Busch > Physics Building > SRN-231 |
 | Thursday  | 10:30 AM - 01:00 PM | Busch > Physics Building > SRN-231 |
 
-Please come with questions!!! The practice exam(s) are a great place to start. I'm more than happy to teach an entire topic scratch, but it's easiest when I have some problems to work off of.
+??? info "How to find SRN-231"
 
-(Come back later, I'll have instructions/diagrams on how to find room 231 :)
+    [Click here](../../hidden/SRN-231.md) for parking, entrance, and finding the room (especially if doors are locked).
+
+Please come with questions!!! The practice exam(s) are a great place to start. I'm more than happy to teach an entire topic scratch, but it's easiest when I have some problems to work off of.
